k8s/apps/kafka/Console-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console-service
  namespace: kafka
spec:
  selector:
    app: redpanda-console
  ports:
    - name: console-port
      port: 8080
