k8s/apps/kafka/SchemaRegistry-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: kafka
spec:
  selector:
    app: schema-registry
  ports:
    - name: schema-port
      port: 8081
