k8s/apps/kafka/Console-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-console-ingress
  namespace: kafka
spec:
  tls:
    - secretName: kafka-console-tls-secret
      hosts:
        - kafka.home.ruchij.com
  rules:
    - host: kafka.home.ruchij.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: redpanda-console-service
                port:
                  name: console-port
